# cpp-wrapper

./: .gitignore  JAVA_PROFILING_GUIDE.md  README.md  RESULTS.md  benchmark_results.csv  build.sh  plot_results.py
cpp/: CMakeLists.txt  cache.cpp  cache.h  cache_c.h
cpp/proto/: cache.pb.cc  cache.pb.h
go/: benchmark_results.csv  cache.go  go.mod  main.go
java/: CMakeLists.txt  benchmark_results.csv  java_profile.jfr  pom.xml
java/src/main/c/: CacheJNI.cpp
java/src/main/java/: Cache.java  Main.java
proto/: cache.proto
python/: README.md  benchmark_results.csv  cache.py  main.py  requirements.txt  test_cache.py
results/: README.md
